# MandelbrotTest

./: .gitmodules  README.md
C++/: CMakeLists.txt  main.cpp
Python/: main.py  requirements.txt
